test/files/errors/divfloat0.jg
_main int () {
    (5.0 / 0.0) return;
}